--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,7 @@
                     <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/sitemap.xml">Sitemap</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/scouterLogParsers">ScouterLogParsers</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/iBatisLogParser">iBatisLogParser</a></li>
                     <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                 </ul>
               </div>
