텐핑 스크립트 삽입

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,9 @@
             </div>
           </div>
 
+          <tenping class="adsbytenping" style="width:100%;max-width:768px;margin:0px auto;display:block;" tenping-ad-display-type="1LawCE8FqKOhetXZhMopsQ%3d%3d" tenping-ad-client="mftSnOaziuBRuttw%2b7%2bOkTT55ONK%2bb6c3ER3TTd85496jyH3yRj0bNnQVsyVi%2b5h"></tenping>
+                    <script async src="//ads.tenping.kr/scripts/adsbytenping.min.js"></script>
+
           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <ins class="adsbygoogle"
                style="display:block"
