--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
         <div class="col-md-3 hidden-xs">
             {% include sidebar.html %}
         </div>
+        <tenping class="adsbytenping" style="width:100%;max-width:768px;margin:0px auto;display:block;" tenping-ad-display-type="1LawCE8FqKOhetXZhMopsQ%3d%3d" tenping-ad-client="mftSnOaziuBRuttw%2b7%2bOkTT55ONK%2bb6c3ER3TTd85496jyH3yRj0bNnQVsyVi%2b5h"></tenping>
+        <script async src="//ads.tenping.kr/scripts/adsbytenping.min.js"></script>
+
         <div class="col-md-9">
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <ins class="adsbygoogle"
@@ -14,9 +17,7 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-
             {{ content }}
-
         </div>
     </div>
 </div>
