구글 자동형 광고로 변경

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
             {% include sidebar.html %}
         </div>
         <div class="col-md-9">
+          <!--
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <ins class="adsbygoogle"
                  style="display:block"
@@ -14,6 +15,8 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
+            -->
+            <script data-ad-client="ca-pub-7078161006200071" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             {{ content }}
         </div>
     </div>
