--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,33 +10,13 @@
             <div class="well">
               <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.date | date: "%b %-d, %Y" }} - {{ page.title }}</a></h1>
               <div class="post-content">
-                <br/>
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-7078161006200071"
-                     data-ad-slot="8769632746"
-                     data-ad-format="auto"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-                <br/>
+                <script data-ad-client="ca-pub-7078161006200071" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 {{ content }}
               </div>
              <br/>
             </div>
-          </div>
-
-          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <ins class="adsbygoogle"
-               style="display:block"
-               data-ad-client="ca-pub-7078161006200071"
-               data-ad-slot="8769632746"
-               data-ad-format="auto"></ins>
-          <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
-
+          </div>          
+            <script data-ad-client="ca-pub-7078161006200071" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <div class="pagination">
               {% if page.next %}
                 <a class="btn btn-default" href="{{ site.baseurl}}{{ page.next.url }}" class="next">Newer Post</a>
