--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,47 +10,8 @@
 
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-  /*
-//const live2d_path = "https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/";
-const live2d_path =  "https://youngclown.github.io";
-$("<link>").attr({ href: live2d_path + "waifu.css", rel: "stylesheet" }).appendTo("head");
-
-$.ajax({
-	url: live2d_path + "live2d.min.js",
-	dataType: "script",
-	cache: true
-});
-
-$.ajax({
-	url: live2d_path + "/js/waifu-tips.js",
-	dataType: "script",
-	cache: true
-});
-$(window).on("load", function() {
-	initWidget(live2d_path + "/css/waifu-tips.json", "https://live2d.fghrsh.net/api");
-});
-
-console.log(`
-  く__,.ヘヽ.        /  ,ー､ 〉
-           ＼ ', !-─‐-i  /  /´
-           ／｀ｰ'       L/／｀ヽ､
-         /   ／,   /|   ,   ,       ',
-       ｲ   / /-‐/  ｉ  L_ ﾊ ヽ!   i
-        ﾚ ﾍ 7ｲ｀ﾄ   ﾚ'ｧ-ﾄ､!ハ|   |
-          !,/7 '0'     ´0iソ|    |
-          |.从"    _     ,,,, / |./    |
-          ﾚ'| i＞.､,,__  _,.イ /   .i   |
-            ﾚ'| | / k_７_/ﾚ'ヽ,  ﾊ.  |
-              | |/i 〈|/   i  ,.ﾍ |  i  |
-             .|/ /  ｉ：    ﾍ!    ＼  |
-              kヽ>､ﾊ    _,.ﾍ､    /､!
-              !'〈//｀Ｔ´', ＼ ｀'7'ｰr'
-              ﾚ'ヽL__|___i,___,ンﾚ|ノ
-                  ﾄ-,/  |___./
-                  'ｰ'    !_,.:
-`);
-*/
-</script>
+{% if page.comments != false %}
+  {% include disqus_comments.html %}
+{% endif %}
 </body>
 </html>
