--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,24 @@
                 <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">Older Post</a>
               {% endif %}
           </div>
+
+
+          <!-- Pagination links -->
+          <div class="pagination">
+             {% assign maxPageNum = paginator.total_pages %} {% assign class
+            ='unactive' %} {% assign currentPage = paginator.page %} {% for i in
+            (1..maxPageNum)%} {% if currentPage == i %} {% assign class = 'active' %}{%
+            else %}{% assign class = 'unactive' %} {% endif %} {% if i == 1 %}
+            <span class="pageNum {{ class }}">
+              <a href="{{ site.baseurl }}/">{{ i }}</a></span
+            >
+            {% else %}
+            <span class="pageNum {{ class }}">
+              <a href="{{ site.baseurl }}/page{{ i }}/">{{ i }}</a></span
+            >
+            {% endif %} {% endfor %}
+          </div>
+
         </div>
     </div>
 </div>
