--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,15 @@
         gtag('config', 'UA-119881066-1');
     </script>
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7078161006200071"
+         data-ad-slot="8769632746"
+         data-ad-format="auto"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </head>
 
 <body>
