--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/scouterLogParsers">ScouterLogParsers</a></li>
+                    <!--<li class="active"><a href="{{ site.baseurl }}/scouterLogParsers">ScouterLogParsers</a></li>-->
                     <li class="active"><a href="{{ site.baseurl }}/iBatisLogParser">iBatisLogParser</a></li>
                     <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                 </ul>
