헤더 광고 삭제

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
         gtag('config', 'UA-119881066-1');
     </script>
 
+    <!-- 헤더 광고 삭제
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
          style="display:block"
@@ -28,7 +29,7 @@
          data-ad-format="auto"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    </script> -->
 </head>
 
 <body>
